Fix mobile device spacing and key touch

--- a/src/components/keyboard/Key.css
+++ b/src/components/keyboard/Key.css
@@ -13,7 +13,7 @@
 .key-natural {
   z-index: 1;
   height: 20rem;
-  margin-right: -1.75rem;
+  margin-right: -2.7rem;
   width: 3.25rem;
   background-color: var(--key-color-natural);
   &:nth-child(5),
